--- a/week_4/tuesday/craigslist_jr/app/views/index.erb
+++ b/week_4/tuesday/craigslist_jr/app/views/index.erb
@@ -1,23 +1,29 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+  <h1>Welcome to Craigslist Jr.!</h1>
+  <br>
+  <h2>Here is a list of our categories: </h2>
+  <ul>
+    <% @categories.each do |category| %>
+    <%="<a href='/?category=#{category.title}'> <li>#{category.title}</li> </a>"%>
+    <% end %>
+  </ul>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+
+  <form action="/submit" method="post">
+    Submit your posting:
+    <br>
+    <span>Title</span><br>
+    <input type="text" name="title">
+    <br>
+    <span>Description</span><br>
+    <input type="text" name="description">
+    <br>
+    <span>Location</span><br>
+    <input type="text" name="location">
+    <br>
+    <span>Cost</span><br>
+    <input type="text" name="cost">
+    <br>
+    <input type="submit" value="Submit">
+  </form>
 </div>
