Adding skeleton files for asynchronous forms challenge.

--- a/week_4/tuesday/craigslist_jr/app/views/post_success.erb
+++ b/week_4/tuesday/craigslist_jr/app/views/post_success.erb
@@ -4,7 +4,7 @@
 
   <%= "Here is your post: #{}" %>
   <br>
-  <%= "And here is your link: link" %>
+  <%= "And here is your link: <a href='/edit/'> <li>#{post.title}</li> </a>" %>
   <br>
 
   <h3>All Posts : </h3>
