Completed jquery ajax challenge.

--- a/assessments/jquery_ajax/app/views/index.erb
+++ b/assessments/jquery_ajax/app/views/index.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <h1>Simple Simon Says</h1>
 
-  <a id="get_color" href="#">Click Me</a>
+  <a id="get_color" href="/color">Click Me</a>
 </div>
   
 <ul id="color_me">
