--- a/assessments/client_server_scoping/app/views/meals.erb
+++ b/assessments/client_server_scoping/app/views/meals.erb
@@ -2,3 +2,7 @@
 <h2 id="meal_holder"></h2>
 
 <button class="meal_teller">Tell the meal!</button>
+
+<script type="text/javascript">
+	var meals = <%= @meals %>
+</script>
